# zivid-python

./: CMakeLists.txt  setup.py
continuous-integration/: requirements-build-and-test.txt  requirements-lint.txt
continuous-integration/linux/: lint.sh
continuous-integration/linux/platform-dependent/arch/: setup.sh
continuous-integration/linux/platform-dependent/common/: install_eigen.sh
continuous-integration/linux/platform-dependent/fedora-30/: setup.sh
continuous-integration/linux/platform-dependent/ubuntu-16.04/: setup.sh
continuous-integration/linux/platform-dependent/ubuntu-18.04/: setup.sh
continuous-integration/windows/: build.py
modules/_zivid/: __init__.py
modules/zivid/: __init__.py  capture_assistant.py  captureassistant.py  handeye.py
samples/: sample_calibrate_eye_to_hand.py  sample_capture_assistant.py
src/: AmbientLightFrequency.cpp  CMakeLists.txt  Calibrate.cpp  Capture_Assistant.cpp  Checkerboard.cpp  HandEye.cpp  PointCloud.cpp  Pose.cpp  ReleasableCamera.cpp  SingletonApplication.cpp  SuggestSettingsParameters.cpp  Wrapper.cpp
src/include/ZividPython/: Calibrate.h  Capture_Assistant.h  DataModelWrapper.h  Matrix.h  Wrappers.h
test/: conftest.py  test_capture_assistant.py  test_hand_eye.py
